--- a/packages/gantt/src/table/group/group.component.scss
+++ b/packages/gantt/src/table/group/group.component.scss
@@ -1,10 +1,14 @@
 .gantt-table-group {
     .gantt-table-group-header {
-        height: 50px;
+        height: 44px;
+        line-height: 44px;
         background: #fafafa;
         vertical-align: middle;
         display: flex;
         align-items: center;
         padding: 0 15px;
+        .gantt-table-group-header-title {
+            cursor: pointer;
+        }
     }
 }
